backend/sync_lib/src/operations/snapshots/sync_lib__operations__operation__tests__creation_errors-2.snap
---
source: sync_lib/src/operations/operation.rs
expression: "Operation::create_delete(0, -1)"
snapshot_kind: text
---
Err(
    NegativeOperationIndexError(
        "Length -1 is negative",
    ),
)
