backend/sync_lib/src/operations/snapshots/sync_lib__operations__operation__tests__creation_errors-3.snap
---
source: sync_lib/src/operations/operation.rs
expression: "Operation::create_delete(-1, -1)"
snapshot_kind: text
---
Err(
    NegativeOperationIndexError(
        "Index -1 is negative",
    ),
)
