backend/sync_lib/src/operations/snapshots/sync_lib__operations__operation__tests__creation_errors-4.snap
---
source: sync_lib/src/operations/operation.rs
expression: "Operation::create_insert(0, \"hi\").unwrap().unwrap().with_index(-1)"
snapshot_kind: text
---
Err(
    NegativeOperationIndexError(
        "Index -1 is negative",
    ),
)
