backend/sync_lib/src/operations/snapshots/sync_lib__operations__operation__tests__creation_errors.snap
---
source: sync_lib/src/operations/operation.rs
expression: "Operation::create_insert(-1, \"hi\")"
snapshot_kind: text
---
Err(
    NegativeOperationIndexError(
        "Index -1 is negative",
    ),
)
