backend/sync_lib/src/operations/snapshots/sync_lib__operations__operation__tests__shifting_error.snap
---
source: sync_lib/src/operations/operation.rs
expression: "Operation::create_insert(1, \"hi\").unwrap().unwrap().with_shifted_index(-2)"
snapshot_kind: text
---
Err(
    NegativeOperationIndexError(
        "Index -1 is negative but operations must have a non-negative index",
    ),
)
